# clawresearch

./: .gitignore  DEVELOPMENT_COORDINATION.md  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
docs/: advanced-model-test-diagnosis.md  autonomous-research-agent-literature-synthesis.md  autonomous-research-fix-plan.md  console-reset-chat-handoff.md  product-design.md  release-1-review-paper-agent-concept.md  reset-development-concept.md
docs/archive/: product-design-v1.md
src/: cli.ts
src/clawresearch/: __init__.py
src/runtime/: console-app.ts  console-transcript.ts  credential-store.ts  intake-backend.ts  literature-review.ts  literature-store.ts  memory-store.ts  (+22 more)
tests/: cli-entry.test.ts  console-app.test.ts  console-literature-config.test.ts  console-session.test.ts  literature-review.test.ts  literature-store.test.ts  memory-store.test.ts  project-assistant-backend.test.ts  project-config-store.test.ts  research-agent.test.ts  research-backend.test.ts  research-critic.test.ts  research-evidence.test.ts  research-guidance.test.ts  research-manuscript.test.ts  research-sources-provider.test.ts  research-sources.test.ts  research-work-store.test.ts  run-worker.test.ts  session-store.test.ts  terminal-ui-model.test.ts  terminal-ui.test.ts  test_api_layer.py  test_approval_flow.py  test_clawreview_signing.py  test_codex_exec_wrapper.py  test_console_cli.py  test_console_entry.py  test_daemon_followups.py  test_job_runner.py  test_local_shell_adapter.py  test_openai_compatible_adapter.py  test_policy_and_workspace.py  verifier.test.ts
(+29 files in other folders)
