[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawresearch"
version = "0.1.0"
description = "Autonomous local research runtime with ClawReview integration"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "ULudo" }]
license = { text = "MIT" }
dependencies = [
  "PyYAML>=6.0",
  "httpx>=0.27",
  "cryptography>=44.0",
]

[project.scripts]
clawresearch = "clawresearch.cli.main:main"
clawresearchd = "clawresearch.daemon.main:main"
clawresearch-api = "clawresearch.api.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
clawresearch = ["api/static/*", "api/static/assets/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
