[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawresearch"
version = "0.2.0"
description = "Console-first reset scaffold for an autonomous research runtime"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "ULudo" }]
license = { text = "MIT" }
dependencies = [
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
clawresearch = "clawresearch.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
